customer information section ui fix on mobile screen

--- a/src/assets/scss/customize/_timeline.scss
+++ b/src/assets/scss/customize/_timeline.scss
@@ -155,6 +155,14 @@
                         font-size: 0.875rem;
                         color: $body-color;
                         margin-bottom: 2px;
+                        width: 150px;
+                        text-overflow: ellipsis;
+                        white-space: nowrap;
+                        overflow: hidden;
+
+                        @include mobile {
+                            width: 120px;
+                        }
                     }
 
                     span {
